--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -4,10 +4,27 @@
 <h3>First name:</h3>
 <h3>Last name:</h3>
 <h3>Tweets:</h3>
-following: {% for item in list %} {{ item.owner }} is following {{item.target}}
-{% endfor %}
+following:
+<ul>
+  {% for item in list %}
+  <li>{{ item.owner }} is following {{item.target}}</li>
+  {% endfor %}
+</ul>
 <p>
   I am a profile page created on: {{ profile.created_on }}
 </p>
+
+<h2>Follow Feed</h2>
+<ul>
+  {% for tweet in tweets %}
+  <li>
+    <hr />
+    <a href="/profile/{{ tweet.author.id }}">{{ tweet.author }}</a>:
+    <p>{{tweet.body}}</p>
+    <p>{{ tweet.date }}</p>
+    <hr />
+  </li>
+  {% endfor %}
+</ul>
 
 {% endblock %}
