--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@ no-unused-expressions */ -->
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/notifications/">Notifications</a></li>
+    <li><a href="/notifications/">Notifications</a>: {{ notifications }}</li>
     <li><a href="/profile/{{ request.user.id }}">Profile</a></li>
   </ul>
 
